# pyuml2svg

./: README.md  cli.py  pyproject.toml
pyuml2svg/: __init__.py  pyuml2svg.py  script.js  style.css
src/pyuml2svg/: cli.py  pyuml2svg.py
