[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyuml2svg"
version = "1.0.0"
description = "Pure-Python UML class diagram renderer producing SVG"
authors = [
    { name="Your Name", email="you@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["uml", "diagram", "svg", "visualization", "uml diagrams"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://example.com"
Source = "https://example.com/repo"
