[project]
name = "pyuml2svg"
version = "0.4.2"
description = "Pure Python UML class diagram generator that renders SVG without dependencies."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Mikael Mölsä", email = "mikael.molsa@pm.me" }
]

keywords = ["uml", "svg", "diagram", "python-uml", "uml-renderer"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: LGPL License",
    "Environment :: Console",
    "Topic :: Software Development :: Documentation",
    "Topic :: Multimedia :: Graphics",
]

dependencies = []

[project.scripts]
pyuml2svg = "cli:main"  # gives the PyPI-installed CLI

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pyuml2svg = ['*.css', '*.js']